# esp-now-network

./: README.md
common/: protocol.h
deployment/: .gitignore  README.md  docker-compose.yml
deployment/mosquitto/config/: mosquitto.conf
gateway/: .gitignore  README.md
gateway/main/: CMakeLists.txt  Kconfig.projbuild  closer.h  config.h  espnow.c  espnow.h  httpd.c  httpd.h  idf_component.yml  logs.c  logs.h  main.c  settings.c  settings.h  wifi.c  wifi.h
gateway_settings/: .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml
gateway_settings/scripts/: compress.mjs
gateway_settings/src/: auth.js  const.js  main.js  menuconfig.js  style.css
gateway_settings/src/components/: form.js  header.js
gateway_settings/src/page/: edit.js  login.js
node/: .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md  idf_component.yml
node/components/node/: CMakeLists.txt  node.c
node/components/node/include/: node.h
node/example/: CMakeLists.txt
node/example/main/: main.c
node/main/: CMakeLists.txt  main.c
node/src/: node.c
node/test_apps/: CMakeLists.txt
node/test_apps/main/: idf_component.yml
test_apps/mqtt_client/: go.mod  main.go
